--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello RCS!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ex omnis possimus accusamus beatae qui magni laudantium consequatur, distinctio earum. Architecto eligendi eos exercitationem eaque ab cumque iure explicabo est.</p>
 </body>
 </html>
