--- a/index.html
+++ b/index.html
@@ -4,10 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Cat Page</title>
 </head>
 <body>
-    <h1>Hello RCS!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ex omnis possimus accusamus beatae qui magni laudantium consequatur, distinctio earum. Architecto eligendi eos exercitationem eaque ab cumque iure explicabo est.</p>
+    <header>
+            <h1>Hello RCS!</h1>
+    </header>
+
+    <a href="#footer">Jump to Buttom</a>
+    <p class="green-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex animi totam enim distinctio dolorum velit aspernatur ab minima consequatur fuga sint at doloribus, tempora praesentium autem quasi, delectus eius eveniet.</p>
+    <a href="#">
+        <img src="cat.jpg" alt="Relaxing Cat" width="300px">
+    </a>
+
+    <p>
+        View more
+        <a href="http://freecatphotoapp.com" target="_blank">
+            cat photos</a>
+    </p>
+
+    <ul>
+        <li>Mice</li>
+        <li>Milk</li>
+        <li>Catnip</li>
+    </ul>
+    <ol>
+        <li>Dogs</li>
+        <li>Water</li>
+        <li>Fleas</li>
+    </ol>
+
+    <form action="/submit-cat-photo">
+        <label><input type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
+        <label><input type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label><br>
+        <label><input type="checkbox" name="personality" value="loving" checked> Loving</label>
+        <label><input type="checkbox" name="personality" value="lazy"> Lazy</label>
+        <label><input type="checkbox" name="personality" value="energetic"> Energetic</label><br>
+        <input type="text" placeholder="cat photo URL" required name="catURL">
+        <button type="submit">Submit</button>
+      </form>
+    
+
+    <p>
+        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam consequuntur architecto placeat ipsum ratione aliquid asperiores laboriosam distinctio provident aliquam optio reiciendis pariatur nihil maiores omnis dolorem in, totam perferendis!</span>
+        <span>Repellendus porro ipsum dolores, velit harum nesciunt? Reprehenderit ullam placeat sapiente earum excepturi odio consectetur! Laboriosam, eum? Placeat in voluptates obcaecati. At, nam. Quaerat et voluptatum quia tenetur hic expedita!</span>
+        <span>Aut soluta facilis corporis eum natus est nihil sed commodi! Esse, eligendi? Ea similique, commodi magnam quidem harum ut esse, nemo consequuntur impedit ipsa eveniet voluptatibus error recusandae neque excepturi?</span>
+        <span>Asperiores consectetur, nihil minima quibusdam non error voluptatum ipsum libero! Ipsa magni recusandae totam exercitationem nostrum? Aperiam dicta eveniet nam fugiat quaerat iusto, voluptatibus velit veniam eius, et tempora quos!</span>
+        <span>Esse aliquid veritatis, voluptates sequi repudiandae, aperiam officiis fugit rem quod ducimus iusto dolores blanditiis dolor. Laudantium dignissimos assumenda, voluptates tempora expedita quaerat ut ipsam repellat, soluta voluptatem nostrum odit.</span>
+    </p>
+
+    <a href="#">Return to beggining</a>
+
+    <footer id="footer">&copy; 2019</footer>
 </body>
 </html>
