--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cat Page</title>
+    <link rel="stylesheet" href="styles/boxmodel.css">
 </head>
+
 <body>
     <header>
-            <h1>Hello RCS!</h1>
+        <h1>Hello RCS!</h1>
     </header>
 
     <a href="#footer">Jump to Buttom</a>
-    <p class="green-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex animi totam enim distinctio dolorum velit aspernatur ab minima consequatur fuga sint at doloribus, tempora praesentium autem quasi, delectus eius eveniet.</p>
+    <p class="green-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex animi totam enim distinctio
+        dolorum velit aspernatur ab minima consequatur fuga sint at doloribus, tempora praesentium autem quasi, delectus
+        eius eveniet.</p>
     <a href="#">
         <img src="cat.jpg" alt="Relaxing Cat" width="300px">
     </a>
@@ -42,19 +47,73 @@
         <label><input type="checkbox" name="personality" value="energetic"> Energetic</label><br>
         <input type="text" placeholder="cat photo URL" required name="catURL">
         <button type="submit">Submit</button>
-      </form>
-    
+    </form>
+
 
     <p>
-        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam consequuntur architecto placeat ipsum ratione aliquid asperiores laboriosam distinctio provident aliquam optio reiciendis pariatur nihil maiores omnis dolorem in, totam perferendis!</span>
-        <span>Repellendus porro ipsum dolores, velit harum nesciunt? Reprehenderit ullam placeat sapiente earum excepturi odio consectetur! Laboriosam, eum? Placeat in voluptates obcaecati. At, nam. Quaerat et voluptatum quia tenetur hic expedita!</span>
-        <span>Aut soluta facilis corporis eum natus est nihil sed commodi! Esse, eligendi? Ea similique, commodi magnam quidem harum ut esse, nemo consequuntur impedit ipsa eveniet voluptatibus error recusandae neque excepturi?</span>
-        <span>Asperiores consectetur, nihil minima quibusdam non error voluptatum ipsum libero! Ipsa magni recusandae totam exercitationem nostrum? Aperiam dicta eveniet nam fugiat quaerat iusto, voluptatibus velit veniam eius, et tempora quos!</span>
-        <span>Esse aliquid veritatis, voluptates sequi repudiandae, aperiam officiis fugit rem quod ducimus iusto dolores blanditiis dolor. Laudantium dignissimos assumenda, voluptates tempora expedita quaerat ut ipsam repellat, soluta voluptatem nostrum odit.</span>
+        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam consequuntur architecto placeat ipsum
+            ratione aliquid asperiores laboriosam distinctio provident aliquam optio reiciendis pariatur nihil maiores
+            omnis dolorem in, totam perferendis!</span>
+        <span>Repellendus porro ipsum dolores, velit harum nesciunt? Reprehenderit ullam placeat sapiente earum
+            excepturi odio consectetur! Laboriosam, eum? Placeat in voluptates obcaecati. At, nam. Quaerat et voluptatum
+            quia tenetur hic expedita!</span>
+        <span>Aut soluta facilis corporis eum natus est nihil sed commodi! Esse, eligendi? Ea similique, commodi magnam
+            quidem harum ut esse, nemo consequuntur impedit ipsa eveniet voluptatibus error recusandae neque
+            excepturi?</span>
+        <span>Asperiores consectetur, nihil minima quibusdam non error voluptatum ipsum libero! Ipsa magni recusandae
+            totam exercitationem nostrum? Aperiam dicta eveniet nam fugiat quaerat iusto, voluptatibus velit veniam
+            eius, et tempora quos!</span>
+        <span>Esse aliquid veritatis, voluptates sequi repudiandae, aperiam officiis fugit rem quod ducimus iusto
+            dolores blanditiis dolor. Laudantium dignissimos assumenda, voluptates tempora expedita quaerat ut ipsam
+            repellat, soluta voluptatem nostrum odit.</span>
     </p>
+
+    <div class="my-class-001">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi vitae nam obcaecati eum asperiores,
+            pariatur, ut rem suscipit iste quod numquam ea sint aut eaque distinctio sed quasi odio labore.</p>
+        <p>Quos enim quisquam accusamus magnam molestias, excepturi expedita neque illum est dolores quo cupiditate at
+            ipsam eum consequatur ea nesciunt obcaecati molestiae! Expedita explicabo accusantium, totam cupiditate
+            minima nam ad!</p>
+        <p>Quo quidem autem nisi. Itaque harum hic vero eaque doloremque odit, possimus cumque nam veritatis ex commodi
+            assumenda impedit sunt at corrupti cupiditate quis. Iste eos voluptates doloribus consequuntur voluptatem!
+        </p>
+    </div>
+    <div class="my-class-002">
+        <p>Quod ratione quaerat fugiat aliquam magnam fugit laboriosam doloribus est eius aperiam facere, aut a
+            necessitatibus minus officiis reiciendis minima, quas, mollitia veniam maiores sit quia. Eos fugiat illum
+            hic!</p>
+        <p>Quibusdam optio exercitationem veniam, excepturi doloribus facere et fuga autem iste sapiente eius placeat
+            corporis nobis pariatur, cumque similique vitae quam recusandae laudantium laboriosam incidunt culpa alias?
+            Temporibus, molestiae necessitatibus.</p>
+        <p>Commodi similique sunt voluptates quasi, placeat voluptatem. Consectetur autem culpa eos doloremque tenetur
+            ut iusto nemo sequi deserunt est provident, aut quibusdam saepe nulla quisquam tempore ducimus, asperiores
+            porro fugiat!</p>
+    </div>
+    <div class="my-class-003">
+        <p>Obcaecati dolorem et quis atque culpa doloribus mollitia asperiores, sapiente eius eos dignissimos dolor
+            dolorum, odio, incidunt voluptates consequuntur quam sunt cumque. Tempora accusantium distinctio quis eos
+            illum! Quo, consequuntur?</p>
+        <p>Sint corrupti adipisci assumenda? Quaerat praesentium voluptate error nemo mollitia at illo cupiditate vero
+            architecto. Delectus laborum asperiores accusamus, est perferendis qui alias amet, totam nemo nisi suscipit,
+            ipsam commodi.</p>
+        <p>Laborum deserunt repellendus ex, debitis odit laudantium expedita eius accusamus eveniet sint quae esse
+            veritatis nulla? Odio omnis quia accusantium provident harum, ullam veritatis aliquid sapiente eligendi
+            recusandae modi incidunt.</p>
+    </div>
+    <div class="my-class-004">
+        <p>Tempore nam provident nihil ad illo natus illum ut ipsum inventore possimus? Eligendi quisquam nobis sit,
+            recusandae error sapiente quam velit! Autem, doloremque eligendi temporibus quas cum vitae qui molestiae.
+        </p>
+        <p>Nihil, accusantium! Possimus odio quod dolorem asperiores! Fugiat earum modi quisquam placeat animi porro,
+            at, magnam quaerat repudiandae, aliquam veritatis provident ut ea dolorem vel nesciunt asperiores voluptates
+            sequi aspernatur?</p>
+        <p>Quae illo dicta fuga iste nam obcaecati rem? Laborum expedita eaque ad reprehenderit ipsa laboriosam unde,
+            adipisci magni cumque eum animi nihil temporibus, eius quibusdam aperiam ea blanditiis iste facere.</p>
+    </div>
 
     <a href="#">Return to beggining</a>
 
     <footer id="footer">&copy; 2019</footer>
 </body>
+
 </html>
